@@ -1,12 +1,18 @@
 #!/bin/bash
 
-#while read linha
-#do
-ip=10.0.2.15
-hostname=manjaro	
-#partes=($linha)
-	#hostname=${partes[0]}
-	#ip=${partes[1]}
-nc -vvn -c -w 2 $ip 3000 > $hostname.txt
-#done < iplist.txt
+# Módulo de recebimento de logs pelo servidor
+
+
+while read linha
+do
+# A lista deverá ter nome de máquina e IP	
+	partes=($linha)
+	hostname=${partes[0]}
+	ip=${partes[1]}
+	ping -c1 $ip
+	ret=$?	
+	if [ $ret -eq 0 ]; then
+		nc -vvn -c -w 2 $ip 3000 > $hostname.txt
+	fi
+done < iplist.txt
 
