@@ -53,3 +53,7 @@ Qui Jul 30 14:41:34 BRT 2015
 - Adding Sanity in Prodap's Repo
 - The Alpha release is out
 
+Sex Ago  7 14:55:52 BRT 2015
+- Adding send.sh
+- Adding receive.sh
+- Changing the main module
